--- a/backend/Dockerfile.portainer
+++ b/backend/Dockerfile.portainer
@@ -1,23 +1,29 @@
 # Dockerfile per Portainer - usa context root
 # Questo Dockerfile deve essere usato quando il build context è la root del progetto
 
-FROM python:3.11-slim
+FROM python:3.11-slim-bookworm
 
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
+ENV TZ=Europe/Rome
 
 WORKDIR /app
 
-# Installazione dipendenze di sistema
+# Dipendenze di sistema (allineate al Dockerfile standard)
 RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     libpq-dev \
+    postgresql-client-15 \
+    rclone \
     libcairo2 \
     libpango-1.0-0 \
     libpangocairo-1.0-0 \
     gdk-pixbuf2.0-0 \
     libffi-dev \
     shared-mime-info \
+    curl \
+    ca-certificates \
+    gnupg \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Copia e installa i requirements (path relativo alla root)
@@ -30,7 +36,8 @@ COPY backend/ .
 
 EXPOSE 8000
 
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+# Comando di avvio (allineato al docker-compose)
+CMD ["bash", "-lc", "python /app/init_migrations.py && uvicorn app.main:app --host 0.0.0.0 --port 8000"]
 
 
 
