--- a/backend/Dockerfile.portainer
+++ b/backend/Dockerfile.portainer
@@ -24,6 +24,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     curl \
     ca-certificates \
     gnupg \
+    bash \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Copia e installa i requirements (path relativo alla root)
