--- a/frontend/Dockerfile.portainer
+++ b/frontend/Dockerfile.portainer
@@ -11,17 +11,17 @@ WORKDIR /app
 # Copia i file di definizione delle dipendenze (path relativo alla root)
 COPY frontend/package.json frontend/package-lock.json* ./
 
-# Installa le dipendenze base
-RUN npm install
+# Installa le dipendenze base (incluse devDependencies)
+RUN npm install --include=dev
 
-# Installa esplicitamente react-signature-canvas
-RUN npm install react-signature-canvas
+# Installa esplicitamente vite e react-signature-canvas per sicurezza
+RUN npm install vite@^5.0.0 react-signature-canvas
 
 # Copia il resto del codice sorgente frontend
 COPY frontend/ .
 
 EXPOSE 5173
 
-CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
+CMD ["npx", "vite", "--host", "0.0.0.0"]
 
 
